# 2024_DVphotons

./: .benchmarks.txt.swp  .gitignore  .mg5_launches_proper.txt.swp  Makefile  benchsZH.sh  crossec_dist.sh  crossec_distZH.sh  hepmc_dist.sh  masterZH.sh  masterZH100000.sh  param_distZH.sh  recollection_photons-TTH_M3_Alpha3_13-1.json  run_TTH_M3_Alpha3_13.hepmc
2023_LLHN_CONCYTEC_Cristian/: benchsZH.sh  crossec_distZH.sh  masterZH.sh  mg5_launches.txt  mg5_launches_Original.txt  mg5_launches_proper.txt
2023_LLHN_CONCYTEC_Cristian/Delphes_Ediciones_Previas/: IsolationMuon.cc
2023_LLHN_CONCYTEC_Cristian/EdicionesCCmodulesDelphes/: Isolation.cc
2023_LLHN_CONCYTEC_Cristian/scripts_2208/: 01_making_opt_hepmc.py  02_run_Delphes.py  03_extracting_root.py  04_bins_after_Delphes_CristianvsWanilo.py  analysis_master.sh  comparacion_muon.py
2023_LLHN_CONCYTEC_Cristian/versiones_finales_Delphes_Edition/: Isolation.h
2023_LLHN_CONCYTEC_Wanilo/: .cross_section.dat.swp  .masterZH.sh.swp  masterZH.sh  mg5_launches_proper.txt
2023_LLHN_CONCYTEC_Wanilo/Delphes_Ediciones_Previas/: CMakeLists.txt  IsolationMuon.h  ModulesLinkDef.h
2023_LLHN_CONCYTEC_Wanilo/Delphes_cards/: delphes_card_LLHN_muiso.tcl  delphes_card_LLHN_optimal6.tcl
2023_LLHN_CONCYTEC_Wanilo/Delphes_tcl_Funciona/: delphes_card_LLHN_muiso.tcl
2023_LLHN_CONCYTEC_Wanilo/scripts_2208/: 02_run_Delphes.py  04_bins_after_Delphes_CristianvsWanilo.py  analysis_master.sh  comparacion_muon_MET.py  comparacion_muon_deltaR.py  comparacion_muon_simple.py  comparacion_muon_simple2.py
2023_LLHN_CONCYTEC_Wanilo/versiones_finales_Delphes_Edition/: Isolation.cc
Delphes_Ediciones/: CMakeLists.txt  IsolationMuon.cc
Delphes_cards/: delphes_card_LLHN_optimal5.tcl  delphes_card_LLHN_optimal6.tcl  delphes_card_LLHNscanVbasic_6.tcl
madevenetold/: madevent_interface.py
madeventgrafeno5/madeventedited/: madevent_interface.py
param_cards_Example/: benchmarks_example.txt
scripts_2208/: 01_cases_hepmc_reader.py  01_making_opt_hepmc.py  02_cases_photons_data_true.py  02_run_Delphes.py  03_extracting_root.py  03_making_complete_hepmc.py  03_making_full_ct_exec_hepmc.py  03_making_full_hepmc.py  03_ultimo_full_selection_hepmc.py  04_bins_after_Delphes_MI_Clean.py  04_bins_after_Delphes_Muon_Isolation.py  04_cuts_after_Delphes.py  04_run_Delphes_danilo.py  05_ISO_vs_NoISO.py  05_deltaR_Merge_Channels.py  05_extracting_root.py  05_extracting_root_no_cuts.py  05a_making_graphs (copy).py  06_basics_observables.py  06_basics_observables_merge.py  06_basics_observables_merge_analisis.py  06_bins_after_Delphes.py  06_com_pt_Channels.py  06_com_pt_Merges_Channels.py  06_compare_pt_opti.py  06_deltaR.py  06_deltaR_Channels.py  06_deltaR_Channels_deltaR_min.py  06_deltaR_correct_merge.py  06_deltaR_dfpickle.py  06_deltaR_dfpickle_iso.py  06_deltaR_dfpickle_opt.py  06_deltaR_tracks.py  06_merge_opt.py  06_simple_histograms_Merges_Channels.py  06_simples_histograms_Channels.py  06_track_iso3.py  06_track_opt2.py  07_contour_graphs_Walter.py  07a_making_graphs (copy).py  (+16 more)
scripts_2208/06_Merge_Fallidos/: 06_bins_after_Delphes_danilo.py  06_deltaR_correct_merge.py  prueba_merge.ipynb
scripts_2208/Codigos_pre_muon_isolation_9_Oct/: 03_extracting_root_avoid_jet_constitu.py  03_extracting_root_jetiso.py  03_extracting_root_jetiso_clean.py  04_bins_after_Delphes_Walter.py  04_jets_solving.py  04_jets_solving_debbug.ipynb  04_jets_solving_debbug2.ipynb  04_muon_isolation.py  04_muon_isolation_debbug.ipynb  04_muon_isolation_debbug2.ipynb  Walter_my_funcs_vfinal.py  borrador_Tracks.txt  borradorprintoverlapmuonjet.txt  indicaciones_codigo  instrucciones_isolation.txt  my_funcs_vfinal.py
scripts_2208/Previos15Oct/: 04_bins_after_Delphes_Muon_Isolation.py  05_com_pt_Channels.py  05_deltaR_Channels.py  06_ISO_vs_NoISO.py  analysis_master.sh  jets_anomalos_completos_events_iso.txt  jets_anomalos_completos_events_no_iso.txt  jets_anomalos_events_iso.txt  jets_anomalos_events_no_iso.txt  merge_leptons.ipynb  my_funcs.py
scripts_2208/alternativecodes5and6/: 06_track_iso.py  06_track_iso2.py  06_track_opt2.py  prueba_append_multi_index.ipynb
scripts_2208/codes_before_zatlas_zsimp/: 02_cases_photons_data.py  03_extracting_root_no_cuts_crosscheck.py  04_run_Delphes_danilo.py  06_com_pt_Merges_Channels.py  06_deltaR_Merge_Channels.py
(+172 files in other folders)
